--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
@@ -16,17 +16,6 @@
 	@extend .large-12;
 }
 
-.prev-next-link {
-	@extend .button;
-	@include transition(all 0.3s ease-in-out);
-	border: none;
-	font-family: $sansFontFamilyLight;
-	opacity: 0.5;
-	&:hover{
-		opacity: 1;
-	}
-}
-
 .img-itw{
 	@extend .column;
 	@extend .small-12;
@@ -92,7 +81,7 @@
 
 /*-----  End of INTERVIEW LAYOUT  ------*/
 
-.socialize{
+.engage-w-us{
 	@extend .clearfix;
 	margin-bottom: 0;
 	background-color: $grayLighter;
@@ -100,22 +89,26 @@
 }
 
 
-@media screen and (min-width: 600px){
-	.nav-entry{
-		position: fixed;
-		top: 45%;
-		width: 100%;
-		a{
-			position: absolute;
-			&:nth-child(2){
-				right: 0;
-			}		
-		}
+.prev-next-link {
+	@extend .button;
+	@include transition(all 0.3s ease-in-out);
+	border: none;
+	font-family: $sansFontFamilyLight;
+	opacity: 0.5;
+	margin-bottom: 0;
+	&:hover{
+		opacity: 1;
 	}
+}
+
+
+
+@media screen and (min-width: 600px){
 	.entry-title{
 		font-size: 3em;
 		bottom: 5%;
-	}	
+	}
+
 }
 
 
