prev next navigation in Interview works

--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_layout.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_layout.scss
@@ -64,7 +64,7 @@ aside.side-info {
 	.prev-next-link{
 		width: 49.5%;		
 	}
-	.older{
+	.newer{
 		float: right;
 	}
 }
@@ -104,7 +104,7 @@ aside.side-info {
 		width: auto;
 		position: absolute;
 	}
-	.older{
+	.newer{
 		right: 0;			
 	}	
 
