--- a/wp/wp-content/themes/leprojo-2013/assets/scss/_custom-style.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/_custom-style.scss
@@ -14,7 +14,7 @@
 @import "custom/main-menu-mq";
 @import "custom/page";
 @import "custom/banner";
-@import "custom/home";
-@import "custom/contact";
+// @import "custom/home";
+// @import "custom/contact";
 @import "custom/interview";
 @import "custom/archives";
