--- a/wp/wp-content/themes/leprojo-2013/assets/scss/_foundation.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/_foundation.scss
@@ -8,30 +8,29 @@
 @import "foundation/components/global";
 @import "foundation/components/grid-5";
 // @import "foundation/components/grid";
-@import "foundation/components/visibility";
-@import "foundation/components/block-grid";
+// @import "foundation/components/visibility";
+// @import "foundation/components/block-grid";
 @import "foundation/components/type";
 @import "foundation/components/buttons";
-@import "foundation/components/forms";
-@import "foundation/components/button-groups";
-@import "foundation/components/dropdown-buttons";
-@import "foundation/components/split-buttons";
+// @import "foundation/components/forms";
+// @import "foundation/components/button-groups";
+// @import "foundation/components/dropdown-buttons";
+// @import "foundation/components/split-buttons";
 // @import "foundation/components/flex-video";
-@import "foundation/components/section";
+// @import "foundation/components/section";
 @import "foundation/components/top-bar";
 // @import "foundation/components/orbit";
 // @import "foundation/components/reveal";
 // @import "foundation/components/joyride";
 // @import "foundation/components/clearing";
 // @import "foundation/components/alert-boxes";
-@import "foundation/components/breadcrumbs";
+// @import "foundation/components/breadcrumbs";
 // @import "foundation/components/custom-forms";
 // @import "foundation/components/keystrokes";
-@import "foundation/components/labels";
+// @import "foundation/components/labels";
 // @import "foundation/components/inline-lists";
-@import "foundation/components/pagination";
-@import "foundation/components/panels";
-@import "foundation/components/panels";
+// @import "foundation/components/pagination";
+// @import "foundation/components/panels";
 // @import "foundation/components/pricing-tables";
 // @import "foundation/components/progress-bars";
 // @import "foundation/components/side-nav";
@@ -40,5 +39,5 @@
 // @import "foundation/components/magellan";
 // @import "foundation/components/tables";
 // @import "foundation/components/thumbs";
-@import "foundation/components/tooltips";
+// @import "foundation/components/tooltips";
 // @import "foundation/components/dropdown";
