--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_helpers.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_helpers.scss
@@ -37,30 +37,31 @@
   }
 }
 
+@mixin grayScale($hover: false){
+  .grayscale{
+    /* for Webkit browsere, Chrome 19+, Safari 6+ ... */
+    -webkit-filter: grayscale(1);
+    -moz-filter: grayscale(1);
+    -ms-filter: grayscale(1);
+    -o-filter: grayscale(1);
+    filter: grayscale(1);  
+    @include transition(all 0.5s ease-in-out);
+    /* this is for Firefox 3.5+, Firefox mobile */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'gs\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#gs");
 
-.grayscale{
-  /* for Webkit browsere, Chrome 19+, Safari 6+ ... */
-  -webkit-filter: grayscale(1);
-  -moz-filter: grayscale(1);
-  -ms-filter: grayscale(1);
-  -o-filter: grayscale(1);
-  filter: grayscale(1);  
-  @include transition(all 0.5s ease-in-out);
-  /* this is for Firefox 3.5+, Firefox mobile */
-  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'gs\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#gs");
-
-  /* for IE6+ */
-  filter: gray;
-
-  // &:hover{
-  // /* for Webkit browsere, Chrome 19+, Safari 6+ ... */
-  // -webkit-filter: grayscale(0);
-  // -moz-filter: grayscale(0);
-  // -ms-filter: grayscale(0);
-  // -o-filter: grayscale(0);
-  // filter: grayscale(0);
-  // /* this is for Firefox 3.5+, Firefox mobile */
-  // filter: none;
-
-  // }
+    /* for IE6+ */
+    filter: gray;
+    @if($hover: true){
+      &:hover{
+        /* for Webkit browsere, Chrome 19+, Safari 6+ ... */
+        -webkit-filter: grayscale(0);
+        -moz-filter: grayscale(0);
+        -ms-filter: grayscale(0);
+        -o-filter: grayscale(0);
+        filter: grayscale(0);
+        /* this is for Firefox 3.5+, Firefox mobile */
+        filter: none;
+      }
+    }
+  }
 }
