--- a/wp/wp-content/themes/leprojo-2013/assets/scss/_custom-style.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/_custom-style.scss
@@ -10,8 +10,8 @@
 @import "custom/header-mq";
 @import "custom/footer-default";
 @import "custom/footer-mq";
-@import "custom/main-menu-default";
-@import "custom/main-menu-mq";
+@import "custom/nav-default";
+@import "custom/nav-mq";
 @import "custom/page";
 @import "custom/banner";
 // @import "custom/home";
