try to fix stuffs for ie8

--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_custom-variables.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_custom-variables.scss
@@ -65,7 +65,7 @@ $microformat-font-color: $gray;
 
 $image_folder: "../img/";
 
-$logo-fallback: url($image_folder + "branding/logo-lsp.png");
+$logo-fallback: url($image_folder + "branding/logo.png");
 $logo: $logo-svg;
 
 
